Fix Modal overflow styles

--- a/assets/src/components/base/Layout.scss
+++ b/assets/src/components/base/Layout.scss
@@ -1,19 +1,20 @@
 @import "./mixins";
 
 .Layout {
+  bottom: 0;
+  left: 0;
+  overflow-y: auto;
+  position: absolute;
+  right: 0;
   z-index: 1;
+  top: 0;
 }
 
 .Layout--landing {
   align-items: center;
-  bottom: 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
 }
 
 .Layout--withModal {
@@ -85,6 +86,7 @@
   display: flex;
   justify-content: center;
   left: 0;
+  overflow-y: auto;
   position: absolute;
   right: 0;
   top: 0;
